--- a/css/leaflet-sidebar.css
+++ b/css/leaflet-sidebar.css
@@ -12,15 +12,15 @@
       top: 10px;
       bottom: 10px;
       transition: width 500ms; } }
-  @media (min-width: 768px) and (max-width: 991px) {
+  @media (min-width: 768px) and (max-width: 1200px) {
     .leaflet-sidebar {
       width: 305px;
       max-width: 305px; } }
-  @media (min-width: 992px) and (max-width: 1199px) {
+  @media (min-width: 1201px) and (max-width: 1399px) {
     .leaflet-sidebar {
       width: 390px;
       max-width: 390px; } }
-  @media (min-width: 1200px) {
+  @media (min-width: 1400px) { /* ACAAAAAAAAA */
     .leaflet-sidebar {
       width: 460px /*860px*/;
       max-width: 460px /*860px*/; } }
@@ -110,13 +110,13 @@
   padding: 10px 20px; }
   .leaflet-sidebar-pane.active {
     display: block; }
-  @media (min-width: 768px) and (max-width: 991px) {
+  @media (min-width: 768px) and (max-width: 1200px) {
     .leaflet-sidebar-pane {
       min-width: 265px; } }
-  @media (min-width: 992px) and (max-width: 1199px) {
+  @media (min-width: 1201px) and (max-width: 1399px) {
     .leaflet-sidebar-pane {
       min-width: 350px; } }
-  @media (min-width: 1200px) {
+  @media (min-width: 1400px) { /* ACAAAAAA */
     .leaflet-sidebar-pane {
       min-width: /*420px */ 410px;
       max-width:/*420px*/ 410px; } }
@@ -160,15 +160,15 @@
   .leaflet-sidebar-left ~ .leaflet-control-container .leaflet-left {
     transition: left 500ms; } }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 768px) and (max-width: 1200px) {
   .leaflet-sidebar-left ~ .leaflet-control-container .leaflet-left {
     left: 315px; } }
 
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: 1201px) and (max-width: 1399px) { /* ACAAA  */
   .leaflet-sidebar-left ~ .leaflet-control-container .leaflet-left {
     left: 400px; } }
 
-@media (min-width: 1200px) {
+@media (min-width: 1400px) {
   .leaflet-sidebar-left ~ .leaflet-control-container .leaflet-left {
     left: 470px; } }
 
