--- a/css/style.css
+++ b/css/style.css
@@ -1388,8 +1388,9 @@ padding-top:100px;
 .leaflet-sidebar-pane{
 padding-left: 0px !important;
 padding-right: 0px !important;
-/*width:70% !important;*/
+/*width:10px !important;*/
 overflow-x: hidden !important;
+
 }
 
 
@@ -2569,8 +2570,20 @@ background-color: rgba(0,0,0,0) !important;
 }
 
 
-
-
+/* FALTA SEGUIR CON ESTO! */
+@media (min-width: 768px) and (max-width: 1200px) {
+.btn-acordion{
+	font-size: 10px;
+	}
+.boton-animales-texto{
+	font-size: 10px;
+}
+}
+@media (min-width: 10px) and (max-width: 470px) {
+.btn-acordion{
+	font-size:10px;
+	}
+}
 
 
 
