--- a/css/style.css
+++ b/css/style.css
@@ -2338,6 +2338,18 @@ font-size:10px;
 }
 
 
+.modal-inicio{
+	display: none;
+	position:absolute;
+	top:50px;
+	left:150px;
+	width:180px;
+	/*height:150px;*/
+	background-color:rgba(0,0,0,0);
+	z-index:999999999999999999 !important;
+}
+.modal-inicio img{width:200px; height:200px;}
+
 
 /* DIALOGG */
 
