--- a/css/style_indice.css
+++ b/css/style_indice.css
@@ -1,7 +1,7 @@
 body{
   width:100vw;
   height:100vh;
-  background-image: url("../img/fondo2.jpeg");
+  background-image: url("../img/inicio.jpg");
   background-position:center;
   background-repeat: no-repeat;
   background-size:cover;
