--- a/css/style.css
+++ b/css/style.css
@@ -2424,7 +2424,7 @@ transition: all 1s ease-in;
 }
 
 
-.loading{
+.loading, .info-project{
 	width:100vw;
 	height:100vh;
 	position:absolute;
@@ -2440,6 +2440,15 @@ transition: all 1s ease-in;
 	left:45%;
 	font-size:30px;
 	color:white;
+}
+
+.info-project{
+	background-color:rgba(0,0,0,0.7);
+	color:white;
+	list-style: none;
+	text-decoration: none;
+	padding-top:200px;
+	padding-bottom:200px;
 }
 
 
