--- a/css/leaflet.css
+++ b/css/leaflet.css
@@ -64,6 +64,7 @@
 	/* Fallback for FF which doesn't support pinch-zoom */
 	touch-action: none;
 	touch-action: pinch-zoom;
+	cursor:auto; /* Agregado para firefox */
 }
 .leaflet-container.leaflet-touch-drag.leaflet-touch-zoom {
 	-ms-touch-action: none;
